fix: header shadow z-index

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -34,7 +34,7 @@
   left: 0;
   width: 100%;
   // background: lightblue;
-  z-index: -1;
+  z-index: $z-index-header-shadow;
   display: none;
 
   @media (max-width: $screen-tablet) {
