--- a/styles/_variable.scss
+++ b/styles/_variable.scss
@@ -24,6 +24,7 @@ $header-mobile-height: 191px;
 $z-index-modal: 999;
 $z-index-selecbox-list: 3;
 $z-index-header: 2;
+$z-index-header-shadow: 1;
 $z-index-card-button: 1;
 
 // Color Mixins
